corrected date field alignment

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -116,7 +116,7 @@ div#indexbikes {
 }
 
 #enddatefield {
-	margin-left: 18px;
+	margin-left: 17px;
 }
 
 .findabikebutton  {
